--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/vite.svg"
+			rel="shortcut icon"
+			href="public/favicon.png"
+			type="image/x-icon"
 		/>
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Search for a Book 📚</title>
+		<title>Search for a Book</title>
 	</head>
 	<body>
 		<div id="root"></div>
